<resources>
    <string name="app_name">EZworkout</string>
    <string name="brand_logo">brand logo</string>
    <string name="developerSignature">Ezworkouts by Bibek</string>
    <string name="menu_item_workouts">Workouts</string>
    <string name="menu_item_diets">Diets</string>
    <string name="menu_item_advice">Advice</string>
    <string name="menu_item_workout_routine">Routine</string>
    <string name="menu_item_other_services">services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwelcome">Welcome to the community, let\'s crush those fitness goals together!</string>
    <string name="workoutsDetails">Workouts Deatail</string>
    <string name="Favourites">Favourites</string>
    <string name="myAccount">My account</string>
    <string name="loading">Loading...</string>
    <string name="exerciseAdditionInfo">Additional Info</string>
    <string name="exType">Type</string>
    <string name="exMuscle">Muscle</string>
    <string name="exDifficulty">Difficulty</string>
    <string name="exEquipment">Equipment</string>
    <string name="exInstruction">Exercise Instruction</string>
    <string name="exerciseList">Exercise List</string>
    <string name="user">Bibek</string>
    <string name="menu_item_my_account">Account</string>
    <string name="exerciseLevel">Level:5</string>
    <string name="catPowerLifting">Powerlifting</string>
    <string name="catStretching">Stretching</string>
    <string name="catStrongman">Strongman</string>
    <string name="catStrength">Strength</string>
    <string name="menu_item_search">Search</string>
    <string name="accountType">Free</string>
    <string name="menu_item_workout_plan">Workout plans</string>
    <string name="benefits">Benefits</string>
    <string name="planATitle">"6-Week Advanced Workout Plan To Build Muscle "</string>
    <string name="result">Result</string>
    <string name="enterWt">Enter weight (kg)</string>
    <string name="enterHt">Enter height (cm)</string>
    <string name="enterHtIn">Enter height in inch</string>
    <string name="Calculate">Calculate</string>
    <string name="enterAge">Age (years)</string>
    <string name="over_weight_msg">You are overweight please do regular workouts</string>
    <string name="under_weight_msg">You are underweight please maintain your diets</string>
    <string name="normal_weight_msg">Congratulations!! Your weight is normal</string>
    <string name="obesity_weight_msg">You are too unhealty. Consider doing regular workouts</string>
    <string name="calculator">BMI Calculator</string>
    <string name="reminder">Reminder</string>
    <string name="myNotes">My notes</string>
</resources>