<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/menu_item_workouts"
    android:icon="@drawable/workout"
    android:title="@string/menu_item_workouts"
    />
    <item android:id="@+id/menu_item_diet"
        android:icon="@drawable/diet_plan"
        android:title="@string/menu_item_diets"
        />
    <item android:id="@+id/menu_item_workout_routine"
        android:icon="@drawable/workout_routine"
        android:title="@string/menu_item_workout_routine"
        />
    <item android:id="@+id/menu_item_advice"
        android:icon="@drawable/user_profile"
        android:title="@string/menu_item_my_account"
        />
    <item android:id="@+id/menu_item_other_services"
        android:icon="@drawable/other_services"
        android:title="@string/menu_item_other_services"
        />

</menu>