<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".OthersActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/BMICalculator"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/round_text_field"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Calculate"
                android:src="@drawable/ic_baseline_calculate_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/calculator"
                android:textAlignment="center"
                android:textColor="@color/blue_700" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/MyNotes"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/round_text_field"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Calculate"
                android:src="@drawable/ic_baseline_note_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/myNotes"
                android:textAlignment="center"
                android:textColor="@color/blue_700" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminder"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/round_text_field"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Calculate"
                android:src="@drawable/ic_baseline_alarm_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/reminder"
                android:textAlignment="center"
                android:textColor="@color/blue_700" />

        </LinearLayout>
    </GridLayout>


</LinearLayout>