<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccountActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
   <androidx.cardview.widget.CardView
       android:layout_width="300dp"
       android:layout_height="400dp"
       android:elevation="7dp"
       app:cardUseCompatPadding="true"
       app:cardCornerRadius="7dp"
       android:layout_marginTop="50dp"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center"
           >
           <ImageView
               android:id="@+id/ivUserImage"
               android:layout_width="200dp"
               android:layout_height="200dp"
               android:src="@drawable/user_profile"
               android:background="@color/theme_light"
               android:padding="5dp"
               android:layout_marginBottom="20dp"
               />
           <TextView
               android:id="@+id/tvMyAccountUserName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/exMuscle"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:fontFamily="@font/poppins_regular"
               />
           <TextView
               android:id="@+id/tvUserEmail"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/app_name"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:fontFamily="@font/poppins_regular"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/exerciseLevel"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:fontFamily="@font/poppins_regular"
               />

       </LinearLayout>
   </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        />


</LinearLayout>